--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,3 +12,12 @@
 .App {
   width: 800px;
 }
+
+.post {
+  display: flex;
+  padding: 15px;
+  border: 2px solid teal;
+  margin-top: 15px;
+  justify-content: space-between;
+  align-items: center;
+}
